--- a/macosx/plugins/DFNet/zh-Hans.lproj/InfoPlist.strings
+++ b/macosx/plugins/DFNet/zh-Hans.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "网络玩家";
 CFBundleShortVersionString = "1.0";
