--- a/macosx/plugins/DFNet/en.lproj/Localizable.strings
+++ b/macosx/plugins/DFNet/en.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-﻿/* 
+/* 
  Localizable.strings
  DFNet
  
@@ -14,3 +14,6 @@
 "The address is too long.\n\nTry to use only the IP address and not a host name." = "The address is too long.\n\nTry to use only the IP address and not a host name.";
 "Blank Address" = "Blank Address";
 "The address specified is either blank, or can't be converted to ASCII.\n\nTry connecting directly using the IP address using latin numerals." = "The address specified is either blank, or can't be converted to ASCII.\n\nTry connecting directly using the IP address using latin numerals.";
+
+"Unable to find EmuThread?" = "Unable to find EmuThread?";
+"Unable to stop emulation because the Objective-C class \"EmuThreaed\" was not found.\nAre you using a different emulator than PCSXR?" = "Unable to stop emulation because the Objective-C class \"EmuThreaed\" was not found.\nAre you using a different emulator than PCSXR?";
