--- a/macosx/plugins/PeopsXgl/en.lproj/InfoPlist.strings
+++ b/macosx/plugins/PeopsXgl/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "Peops OpenGL GPU Plugin";
 CFBundleShortVersionString = "GPU Plugin 1.17";
