--- a/macosx/Resources/pt-BR.lproj/InfoPlist.strings
+++ b/macosx/Resources/pt-BR.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 //Commented out strings are those that need to be translated
 
