--- a/macosx/plugins/DFCdrom/en.lproj/InfoPlist.strings
+++ b/macosx/plugins/DFCdrom/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "CD-ROM Drive Reader";
 CFBundleShortVersionString = "1.0";
