--- a/macosx/plugins/DFInput/en.lproj/InfoPlist.strings
+++ b/macosx/plugins/DFInput/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "DFInput PSX Controller Plugin";
 CFBundleShortVersionString = "DFInput version 1.5";
