--- a/macosx/plugins/DFNet/en.lproj/InfoPlist.strings
+++ b/macosx/plugins/DFNet/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "NetPlay";
 CFBundleShortVersionString = "1.0";
