--- a/macosx/plugins/DFSound/Resorces/SDL/en.lproj/InfoPlist.strings
+++ b/macosx/plugins/DFSound/Resorces/SDL/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-﻿/* Localized versions of Info.plist keys */
+/* Localized versions of Info.plist keys */
 
 CFBundleName = "SDL Sound Plugin";
 CFBundleShortVersionString = "SPU Plugin for PCSXR";
